Basic HighCharts copied example

--- a/webServer/resources/css/index.css
+++ b/webServer/resources/css/index.css
@@ -7,3 +7,9 @@ body {
     text-align: center;
 }
 
+#containerPlot {
+    min-width: 310px;
+	max-width: 800px;
+	height: 400px;
+	margin: 0 auto
+}
